# moneta-agents-o1

./: LICENSE  README.md
src/: cosmosdb_cli_addrole.sh
src/backend/: .env.sample  Testing-o1.ipynb  app.py  crm_store.py  pyproject.toml
src/backend/accountopening/: business_logic.txt  planner_executor.py
src/backend/skills/: account_opening_tools.py
src/data/customer-profiles/: customer-banking.json  prospect-banking-1.json
src/frontend/: pyproject.toml
src/frontend/accountopening/: app.py  ui_utils.py
