[project]
name = "moneta-agents-o1-frontend"
version = "0.1.0"
description = "Frontend UI for Moneta"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "msal>=1.31.1",
    "msal-streamlit-authentication>=1.1.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests-html>=0.10.0",
    "streamlit-msal>=0.2.0",
    "streamlit-pdf-viewer>=0.0.19",
    "streamlit>=1.42.0",
]
